Fix menu items on small screens.

--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -18,7 +18,6 @@
 	a, a:visited {
 		color: white;
 		text-decoration: none;
-		padding: 1em;
 	}
 	a:hover {
 		color: $yellow;
